# website-visitor-geolocator

./: .gitignore  .pylintrc  LICENCE  MANIFEST.in  README.md  generate-env.sh  pyproject.toml  tag_release.sh  website-example.html
backend/: .env.example  .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
backend/example_app/: settings.py  urls.py  wsgi.py
backend/visitor_geolocator/api/: views.py
backend/visitor_geolocator/app/: views.py
backend/visitor_geolocator/core/: admin.py  apps.py  middleware.py  models.py  services.py  urls.py  views.py
backend/visitor_geolocator/core/migrations/: 0001_initial.py  0002_alter_domain_created_by.py  0003_domain_active.py  0004_alter_domain_geolocation_api_token_ipinfo.py  0005_websitevisitorgeolocatorpermissions.py  0006_visitor_user_agent_parsed.py  0007_datamigration_parse_user_agents.py
backend/visitor_geolocator/core/templates/: tracking_script.txt
backend/visitor_geolocator/frontend/: apps.py  permissions.py  serializers.py  urls.py  views.py
backend/visitor_geolocator/notifications/: admin.py  apps.py  models.py  serializers.py  services.py  urls.py  views.py
backend/visitor_geolocator/notifications/migrations/: 0001_initial.py  0002_notificationpreferences.py  0003_notificationpreferences_daily_summary_notifications_and_more.py  0004_rename_daily_summary_website_visitor_geolocator_notifications_notificationpreferences_daily_summary_.py  0005_delete_pushsubscription.py  0006_summarynotificationpreferences_and_more.py
backend/visitor_geolocator/statistics/: apps.py  models.py  pagination.py  serializers.py  services.py  urls.py  views.py
backend/visitor_geolocator/statistics/management/commands/: import_areas.py
backend/visitor_geolocator/statistics/migrations/: 0001_initial.py
frontend/: .env.example  .npmrc  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.node.json  vite.config.ts
frontend/public/: sw.js
frontend/src/: App.tsx  App.vue  main.ts  main.tsx  sw.js
frontend/src/components/: AppHeader.tsx  AppSidebar.tsx  IPDetailsModal.tsx  InstallButton.tsx  NavigationCard.tsx  NotificationToggle.tsx  VisitorDataTable.tsx  VisitorLocationMap.tsx
frontend/src/components/app/: AppSidebar.vue
frontend/src/components/pages/: Dashboard.tsx  Domains.tsx  Settings.tsx  Statistics.tsx  Visitors.tsx
frontend/src/components/statistics/: LatestVisitorsChart.tsx  StatisticsHeader.tsx
frontend/src/components/statistics/graphs/: AreaMap.tsx  LatestVisitorsChart.tsx  OperatingSystemPieChart.tsx  StatisticsPieChart.tsx  UserAgentPieChart.tsx
frontend/src/components/statistics/tables/: StatisticsTable.tsx
frontend/src/components/statistics/tables/area-table/: AreaTable.tsx  columns.tsx
frontend/src/components/statistics/tables/operating-system-table/: OperatingSystemTable.tsx  columns.tsx
frontend/src/components/statistics/tables/user-agent-table/: UserAgentTable.tsx  columns.tsx
frontend/src/components/statistics/tables/visitor-table/: VisitorTable.tsx  columns.tsx
frontend/src/components/ui/: alert-dialog.tsx  alert.tsx  avatar.tsx  badge.tsx  button.tsx  card.tsx  chart.tsx  custom-chart.css  custom-chart.tsx  data-table-column-header.tsx  data-table-pagination.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  slider.tsx  switch.tsx  table.tsx  textarea.tsx  theme-toggle.tsx  tooltip.tsx
frontend/src/components/visitor-data-table/: Table.tsx  columns.tsx
frontend/src/hooks/: use-scrollbar-height.ts
frontend/src/pages/: Home.vue
frontend/src/services/: api.ts  apiDomain.ts  apiSettings.ts  apiStatistics.ts  cache.ts  cacheService.ts  flags.ts  notifications.ts  pushNotifications.ts
frontend/src/services/api/: api.ts  apiDomain.ts  apiSettings.ts  apiStatistics.ts
frontend/src/styles/: index.css
frontend/src/utils/: clipboard.ts  version.ts
