[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "website-visitor-geolocator"
dynamic = ["version"]
description = "A Django app for geolocating website visitors"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Marko Vrečer" }
]
license = { text = "MIT" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.2",
    "requests>=2.32",
    "django-ipware>=7.0",
    "django-cors-headers>=4.7",
    "python-dotenv>=1.1",
    "djangorestframework>=3.16",
    "user-agents>=2.2",
    "django-simple-notifications @ git+https://github.com/Yxmaxy/django-simple-notifications.git@v2.0.0",
]

[project.optional-dependencies]
dev = [
    "pylint>=3.3",
    "pylint-django>=2.6",
    "black>=25.1",
]

[project.urls]
Homepage = "https://github.com/Yxmaxy/website-visitor-geolocator"
Repository = "https://github.com/Yxmaxy/website-visitor-geolocator.git"

[tool.setuptools]
packages = [
    "visitor_geolocator",
    "visitor_geolocator.core",
    "visitor_geolocator.frontend", 
    "visitor_geolocator.notifications",
    "visitor_geolocator.statistics"
]
include-package-data = true

[tool.setuptools.package-dir]
visitor_geolocator = "backend/visitor_geolocator"

[tool.setuptools.package-data]
"visitor_geolocator.core" = ["migrations/*.py", "templates/*.txt"]
"visitor_geolocator.frontend" = ["migrations/*.py"]
"visitor_geolocator.notifications" = ["migrations/*.py"]
"visitor_geolocator.statistics" = ["migrations/*.py", "templates/*.txt", "management/*.py", "data/*.geojson"]

[tool.setuptools.dynamic]
version = {file = "version.txt"}

[tool.uv]
exclude-newer = "2026-04-26T00:00:00Z"
