[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-visitor-geolocator"
version = "0.1.0"
description = "A Django app for geolocating website visitors"
readme = "README.md"
authors = [
    { name = "Marko Vrečer" }
]
license = { text = "MIT" }
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "Django>=4.2",
    # Add other dependencies here
]

[project.urls]
Homepage = "https://github.com/Yxmaxy/website-visitor-geolocator"
Repository = "https://github.com/Yxmaxy/website-visitor-geolocator.git"

[tool.setuptools]
packages = ["visitor_geolocator"]
